# notebook

./: .gitignore  Deep-Neural-Network.ipynb  Deep_Neural_Network.ipynb  Shallow_Neural_Network.ipynb  Titanic.ipynb  faiss.ipynb
adv-retrieval-w-chroma/: L1-student.ipynb  L2-student.ipynb  L3-student.ipynb  L4-student.ipynb  L5-student.ipynb  README.md  pyproject.toml
deep-learning/: Logistic_Regression.ipynb
gen-ai-llm/: Lab_1_summarize_dialogue.ipynb  Lab_2_fine_tune_generative_ai_model.ipynb  Lab_3_fine_tune_model_to_detoxify_summaries.ipynb
llm/: main.py  pyproject.toml
mongodb/: LangChain-GraphRAG.ipynb  LangChain-Hybrid-Search.ipynb  LangChain-Parent-Retrieval.ipynb  VoyageAI-Quickstart.ipynb  VoyageAI_Quickstart.ipynb  langchain-graphrag.ipynb  langchain-hybrid-search.ipynb  langchain-parent-document-retrieval.ipynb  pyproject.toml
mongodb/genai-devday-notebooks/: ai-agents-lab.ipynb  ai-rag-lab.ipynb  vector-search-lab.ipynb
practical-deep-learning/: Gradient_Checking.ipynb  Initialization.ipynb  Optimization_methods.ipynb  Regularization.ipynb  Tensorflow_introduction.ipynb  pyproject.toml
