[project]
name = "adv-retrieval-w-chroma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "chromadb>=1.1.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.27",
    "matplotlib>=3.10.7",
    "openai>=2.2.0",
    "pip>=25.2",
    "pypdf>=6.1.1",
    "sentence-transformers>=5.1.1",
    "umap-learn>=0.5.9.post2",
]
