[project]
name = "llm-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.47.0",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "torch>=2.8.0",
    "transformers>=4.55.4",
]
