[project]
name = "practical-deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "dlai-tools>=0.6.1",
    "h5py>=3.14.0",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "tensorflow[and-cuda]>=2.20.0",
    "termcolor>=3.1.0",
]
